[package]
name = "uf-dps3xx"
edition = "2021"
version = "0.1.0"
authors = ["Nickolai Novik <nickolainovik@gmail.com>"]
description = "A platform agnostic driver for DPS3xx through I2C"

readme = "README.md"
keywords = [
  "embedded-hal-driver",
  "pressure",
  "temperature",
  "sensor",
  "DPS3xx",
]
categories = ["embedded", "hardware-support", "no-std"]
license = "Apache-2.0"
homepage = "https://github.com/jettify/uf-dps3xx"
repository = "https://github.com/jettify/uf-dps3xx"

[dependencies]
embedded-hal = { version = "1.0.0" }
defmt = { version = "1.0.1", optional = true }
nb = { version = "1.1.0" }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1" }


[features]
"defmt" = ["dep:defmt"]
